1. Move sidebar to a partial view SidebarNav.cshtml so that the Detail and Index views of Glove can share it. It contains collapse menu items, which is collapsed by default in mobile browser. 2. Replace banner images on the home page. 3. Minor layout fixes.

--- a/ sytrading --username shang0001@gmail.com/SYTradingPublicSite/Content/Site.css
+++ b/ sytrading --username shang0001@gmail.com/SYTradingPublicSite/Content/Site.css
@@ -49,6 +49,10 @@ form {
     margin-bottom: 0px;
 }
 
+.hero-unit {
+    padding: 30px 30px 1px 30px;
+}
+
 .home-icons div{
     text-align: center;
 }
@@ -85,6 +89,15 @@ form {
         padding-right: 5px;
     }
 }
+
+/* Sidebar Nav */
+.sidebar-nav {
+    padding: 0px;
+}
+
+    .sidebar-nav .accordion {
+        margin-bottom: 0px;
+    }
 
 
 /* Special grid styles
